# Mindforge

./: .dockerignore  .env.example  .gitignore  Dockerfile  FIXES_IMPLEMENTED.md  pyproject.toml
.github/workflows/: ci.yml
Mindforge/app/ai_engine/inference/: engine.py
Mindforge/app/ai_engine/utils/: error_handler.py  logging_config.py
app/: main.py  requirements.txt
app/ai_engine/: requirements.txt
app/ai_engine/configs/: config.py
app/ai_engine/image_processing/: __init__.py
app/ai_engine/image_processing/configs/: __init__.py  processing_config.py
app/ai_engine/image_processing/core/: __init__.py  lighting_correction.py  noise_reduction.py  perspective_transform.py  pipeline.py  quality_enhancement.py
app/ai_engine/image_processing/tests/: __init__.py  test_pipeline.py
app/ai_engine/image_processing/utils/: __init__.py  image_utils.py
app/ai_engine/inference/: product_detection.py  stock_calculator.py
app/ai_engine/models/: model_loader.py
app/ai_engine/preprocessing/: pipeline.py
app/ai_engine/utils/: logging_config.py
app/core/: config.py
app/core/services/: ai_service.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_config.py  test_logging.py
